--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="error_fill_all_fields">All fields mus be filled</string>
     <string name="task_added">added</string>
     <string name="delete_task">Delete task</string>
+    <string name="edit_task">Edit task</string>
     <string name="delete_task_confirmation">Are you sure you want to delete this task?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
