priority spinner added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@
         <item>AssetManager</item>
         <item>RequestFlow</item>
     </string-array>
+    <string-array name="priority">
+        <item>Normal</item>
+        <item>Major</item>
+        <item>Critical</item>
+    </string-array>
 </resources>
