--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="task_content_preview_goes_here">Task content preview goes here...</string>
     <string name="error_fill_all_fields">All fields mus be filled</string>
     <string name="task_added">added</string>
+    <string name="task_updated">Task updated</string>
+    <string name="update">Update</string>
     <string name="delete_task">Delete task</string>
     <string name="edit_task">Edit task</string>
     <string name="delete_task_confirmation">Are you sure you want to delete this task?</string>
