--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="no">No</string>
     <string name="icplatform">ICPlatform</string>
     <string name="offline_mode_no_login_required">Offline Mode (No Login Required)</string>
+    <string name="sorting">Sorting</string>
     <string-array name="tasks">
         <item>IncidentTracker</item>
         <item>ChangeMonitor</item>
@@ -32,8 +33,8 @@
         <item>RequestFlow</item>
     </string-array>
     <string-array name="priority">
-        <item>Normal</item>
-        <item>Major</item>
         <item>Critical</item>
+        <item>Major</item>
+        <item>Normal</item>
     </string-array>
 </resources>
